# Agent365-python

./: .coverage  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  HOW_TO_SET_A_VERSION.md  README.md  generate_dependency_diagram.py  pyproject.toml  replace-version.ps1  setup.py
.claude/agents/: architecture-reviewer.md  code-review-manager.md  code-reviewer.md  pr-comment-resolver.md  prd-task-generator.md  prd-writer.md  task-implementer.md  test-coverage-reviewer.md
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml
docs/: design.md  prd-x-ms-agentid-header.md
docs/prd/: PRD-CentralizedPackageVersions.md  azure-ai-foundry-chat-history-api-tasks.md  azure-ai-foundry-chat-history-api.md  semantic-kernel-chat-history-api-tasks.md  semantic-kernel-chat-history-api.md
libraries/microsoft-agents-a365-notifications/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-notifications/docs/: design.md
libraries/microsoft-agents-a365-notifications/microsoft_agents_a365/notifications/: __init__.py  agent_notification.py
libraries/microsoft-agents-a365-notifications/microsoft_agents_a365/notifications/models/: __init__.py  agent_lifecycle_event.py  agent_notification_activity.py  agent_subchannel.py  email_reference.py  email_response.py  notification_types.py  wpx_comment.py
libraries/microsoft-agents-a365-observability-core/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-observability-core/docs/: design.md
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/: __init__.py  agent_details.py  config.py  constants.py  execute_tool_scope.py  inference_scope.py  invoke_agent_scope.py  opentelemetry_scope.py  request.py  utils.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/exporters/: agent365_exporter.py  kairo_exporter.py  utils.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/middleware/: __init__.py  baggage_builder.py  turn_context_baggage.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/models/: response.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/spans_scopes/: output_scope.py
libraries/microsoft-agents-a365-observability-core/microsoft_agents_a365/observability/core/trace_processor/: span_processor.py  util.py
libraries/microsoft-agents-a365-observability-extensions-agentframework/: README.md  pyproject.toml
libraries/microsoft-agents-a365-observability-extensions-agentframework/docs/: design.md
libraries/microsoft-agents-a365-observability-extensions-agentframework/microsoft_agents_a365/observability/extensions/agentframework/: __init__.py  span_enricher.py  span_processor.py  trace_instrumentor.py  utils.py
libraries/microsoft-agents-a365-observability-extensions-langchain/: README.md  pyproject.toml
libraries/microsoft-agents-a365-observability-extensions-openai/: README.md  pyproject.toml
libraries/microsoft-agents-a365-observability-extensions-semantickernel/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-observability-hosting/: pyproject.toml
libraries/microsoft-agents-a365-runtime/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-settings/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-tooling/: CHANGELOG.md  README.md  pyproject.toml
libraries/microsoft-agents-a365-tooling-extensions-agentframework/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-tooling-extensions-agentframework/docs/: design.md
libraries/microsoft-agents-a365-tooling-extensions-agentframework/microsoft_agents_a365/tooling/extensions/agentframework/: __init__.py
libraries/microsoft-agents-a365-tooling-extensions-agentframework/microsoft_agents_a365/tooling/extensions/agentframework/services/: __init__.py  mcp_tool_registration_service.py
libraries/microsoft-agents-a365-tooling-extensions-azureaifoundry/: README.md  pyproject.toml
libraries/microsoft-agents-a365-tooling-extensions-googleadk/: README.md  pyproject.toml
libraries/microsoft-agents-a365-tooling-extensions-openai/: README.md  pyproject.toml  setup.py
libraries/microsoft-agents-a365-tooling-extensions-semantickernel/: README.md  pyproject.toml
libraries/microsoft-agents-a365-tooling/docs/: design.md
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/: __init__.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/models/: mcp_server_config.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/services/: mcp_tool_server_configuration_service.py
libraries/microsoft-agents-a365-tooling/microsoft_agents_a365/tooling/utils/: __init__.py  constants.py  utility.py
scripts/: verify_constraints.py
tests/: .env.example  README.md  RUNNING_TESTS.md  TEST_PLAN.md  test_agent365_exporter.py  test_alignment.py  test_baggage_builder.py  test_dependency_constraints.py  test_inference_scope.py  test_kairo.py  test_kairo_exporter.py  test_power_platform_api_discovery.py  test_record_attributes.py  test_span_processor.py  test_turn_context_baggage.py  test_wrapper_langchain.py  test_wrapper_openaiagents.py  test_wrapper_semantic_kernel.py  usage_example.py
tests/azureaifoundry_tests/: test_azureaifoundry_service_logic.py
tests/integration/: conftest.py  test_agentframework_trace_processor.py  test_openai_trace_processor.py
tests/microsoft-agents-a365-notification/: __init__.py
tests/microsoft-agents-a365-tooling-extension-openai-unittest/: __init__.py
tests/microsoft-agents-a365-tooling-extension-semantickernel-unittest/: __init__.py
tests/microsoft-agents-a365-tooling-extensions-azureaifoundry-unittest/: __init__.py  test_azureaifoundry_service_logic.py
tests/notifications/: __init__.py
versioning/: TARGET-VERSION  pyproject.toml
(+128 files in other folders)
